HeaderInfo responsive layout fixes and various little spacing between elements fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,7 @@
-html,
+
 body {
-  padding: 0;
-  margin: 0;
+  margin-left: 10px;
+  margin-right: 10px;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-image: url(../public/Rectangle\ 1.png);
@@ -9,6 +9,13 @@ body {
   background-size: 100% 32%;
   background-position: top;
   background-attachment: fixed;
+}
+
+@media screen and (min-width: 600px){
+  body {
+    margin-left: 34px;
+    margin-right: 23px;
+  }
 }
 
 a {
